<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStudentActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/studentNameTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/student_name"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/studentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/genderWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/studentNameTIL"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/selectGender"/>

        <RadioGroup
            android:id="@+id/genderGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/genderMale"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/genderFemale"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/genderOthers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/other" />
        </RadioGroup>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/gradeSpinnerWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genderWrapper"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/selectGrade"/>

        <Spinner
            android:id="@+id/gradeSpinnerItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_4dp_grey_border"
            android:minHeight="52dp"
            android:layout_marginTop="8dp"
           />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/subjectWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gradeSpinnerWrapper"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/selectSubject"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <CheckBox
                android:id="@+id/optSubjectAccounts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Accounts"
                android:layout_weight="1"/>

            <CheckBox
                android:id="@+id/optSubjectMath"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/optionalMathematics"
                android:layout_weight="1"/>
        </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

            <CheckBox
                android:id="@+id/optSubjectComputer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Computer"
                android:layout_weight="1"/>

            <CheckBox
                android:id="@+id/optSubjectEconomics"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Economics"
                android:layout_weight="1"/>
        </LinearLayout>


    </LinearLayout>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/isEnrolled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subjectWrapper"
        android:text="@string/isEnrolled"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"/>

    
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/isEnrolled"
        android:background="@color/gray"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/addBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:drawableStart="@drawable/baseline_add_24"
        android:drawableTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/divider"
        android:text="@string/Submit"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp">

    </com.google.android.material.button.MaterialButton>

</androidx.constraintlayout.widget.ConstraintLayout>