<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/studentName"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/moreOptions"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Gaurab Neupane"
        />
    <ImageView
        android:id="@+id/moreOptions"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="12dp"
        android:src="@drawable/baseline_more_vert_24"
        android:contentDescription="@string/more_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/studentName"
        app:layout_constraintBottom_toBottomOf="@id/studentName"/>

    <LinearLayout
        android:id="@+id/grade_and_gender_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/studentName">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/gender_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_label"/>

            <TextView
                android:id="@+id/gender_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                tools:text="Male"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/grade_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grade_label"/>

            <TextView
                android:id="@+id/grade_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                tools:text="One"/>
        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/isEnrolled_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/grade_and_gender_wrapper">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/isEnrolled_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/isEnrolled_label"/>

            <TextView
                android:id="@+id/isEnrolled_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                tools:text="True"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/optional_subjects_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/isEnrolled_wrapper"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <TextView
            android:id="@+id/optionalSubjectLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Optional Subjects" />

        <TextView
            android:id="@+id/optionalSubjectValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            tools:text="Math, Science" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>